<resources>
    <string name="app_name">MakanYuk</string>
    <string name="nav_home">Home</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_transaction_history">Transactions</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>